fixed horizontal scrolling

--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@
     padding: 0 10px;
     width: 100%;
     margin: 0 auto;
+    overflow:hidden;
 }
 
 .header__top {
